# separation-detection

./: .gitignore  LICENSE  ReadME.md  pyproject.toml  run-jupyter.bat
notebooks/: concatenate_audio.ipynb
notebooks/.ipynb_checkpoints/: concatenate_audio-checkpoint.ipynb
scripts/: combinate_voice.py  postprocess_data.py  preprocess_data.py  train_model.py
separation-detection/data/: data_module.py  datasets.py
separation-detection/utils/: signal_processing.py  visualization.py
separation_detection/data/: datasets.py
separation_detection/models/: classifier.py  detector.py
separation_detection/trainers/: trainer.py
separation_detection/utils/: preprocess.py  visualization.py
tests/: dictTest.py  nameIncludeTest.py
